fixed unreadable color combinations

--- a/plep_main/resources/css/dropdown.css
+++ b/plep_main/resources/css/dropdown.css
@@ -21,14 +21,30 @@
 }
 
 /* Styling for a item of which the checkbox is checked */
-.combo-box-done {
+.combobox-done,
+.combobox-done-light,
+.combobox-done-dark {
     -fx-font-style: oblique;
 }
 
-.combo-box-done .text {
+.combobox-done .text,
+.combobox-done-light .text,
+.combobox-done-dark .text {
     -fx-strikethrough: true;
 }
 
-.combo-box-done .list-cell {
-    -fx-text-fill: #949494;
+.combobox-done .list-cell {
+    -fx-text-fill: -fx-text-gray;
+}
+
+.combobox-done-light .list-cell {
+    -fx-text-fill: -fx-text-gray-light;
+}
+
+.combobox-done-dark .list-cell {
+    -fx-text-fill: -fx-text-gray-dark;
+}
+
+.combobox-text-white .list-cell {
+    -fx-text-fill: #ffffff;
 }
